# swing-analyzer

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: analysis.py  main.py
backend/app/detection/: __init__.py  catalog.py  engine.py  geometry.py  phases.py  rules.py  thresholds.py
backend/app/pose/: __init__.py  config.py  estimator.py  pipeline.py  sampling.py  schema.py
backend/app/validation/: __init__.py  checks.py  reasons.py  result.py  service.py  thresholds.py
backend/scripts/: ingest_fixture.py
backend/tests/: detection_helpers.py  pose_helpers.py  test_analyze.py  test_detection_engine.py  test_detection_phases.py  test_detection_rules.py  test_golden_fixtures.py  test_ingest_fixture.py  test_pose_config.py  test_pose_mediapipe.py  test_pose_pipeline.py  test_pose_sampling.py  test_pose_schema.py  test_validation_checks.py  test_validation_reasons.py  test_validation_service.py
backend/tests/fixtures/golden/: .gitignore  README.md  manifest.json
docs/: detection.md  fixtures-credits.md  launch-checklist.md  pose-series.md  prd.md  tech-stack.md  validation.md
docs/design/: 04-error-rejection.reference.html  README.md  design-system.md
frontend/: .env.example  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/src/components/: AppHeader.tsx  BottomNav.tsx  CtaButton.tsx  FlawCard.tsx  (+5 more)
(+10 files in other folders)
