[project]
name = "swing-analyzer-backend"
version = "0.1.0"
description = "Stateless swing analysis service for Swing Analyzer v1."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
