[project]
name = "swing-analyzer-backend"
version = "0.1.0"
description = "Stateless swing analysis service for Swing Analyzer v1."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]

# MediaPipe and OpenCV ship no type stubs; scope the relaxation to those imports
# so strict typing stays fully enforced across our own code.
[[tool.mypy.overrides]]
module = ["mediapipe.*", "cv2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
